# multi-tz-clock

./: .gitignore  .vercelignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  ROADMAP.md  index.html  jest.config.cjs  package-lock.json  package.json  playwright.config.js
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  vercel-browser.yml
assets/css/: main.css  theme.css
assets/js/: app.js  clock-utils.js  desktop-shell.js
desktop/: RELEASE-CHECKLIST.md  main.cjs  preferences.cjs  preload.cjs  window-config.cjs  window-presets.json
scripts/: agent-guard.cjs  build-electron.cjs  install-hooks.cjs  prepare-tauri-dist.cjs  serve-static.cjs  start-electron.cjs  start-tauri-dev.cjs  test-tauri-smoke.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/e2e/: clock.spec.js
tests/integration/: layout-rules.integration.jest.test.js
tests/unit/: agent-guard.jest.test.js  clock-utils.jest.test.js  desktop-main.jest.test.js  desktop-preferences.jest.test.js  desktop-shell.jest.test.js  desktop-window-config.jest.test.js  package-config.jest.test.js  serve-static.jest.test.js  start-tauri-dev.jest.test.js
