[package]
name = "multi-tz-clock"
version = "0.1.0"
description = "Tauri desktop host for the Multi-TZ Clock browser app"
authors = ["capnc"]
edition = "2021"

[lib]
name = "multi_tz_clock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
