[package]
name = "multi-tz-clock"
version = "1.0.0"
description = "Tauri desktop host for the Multi-TZ Clock browser app"
authors = ["capnc"]
edition = "2021"

[lib]
name = "multi_tz_clock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
